twitter widget update

--- a/partials/widget-twitter.hbs
+++ b/partials/widget-twitter.hbs
@@ -2,12 +2,7 @@
 <div class="widget">
 	<div class="content twitter">
 		<h4 class="title">@HackersAndSlackers</h4>
-	 <!-- start feedwind code -->  <!-- start feedwind code --> <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" data-fw-param="78859/"></script> <!-- end feedwind code -->  <!-- end feedwind code --> {{!--
-
-
-		<!-- start code from publish.twitter.com -->
-			<a class="twitter-timeline" data-chrome="noheader nofooter noscrollbar" data-tweet-limit="3" data-link-color="@theme-color" href="{{twitter_url}}?ref_src=twsrc%5Etfw">{{twitter}}</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-		<!-- end code from publish.twitter.com -->--}}
+			<a class="twitter-timeline" data-chrome="nofooter noheader noscrollbar" data-tweet-limit="5" data-link-color="#26a2c7" href="https://twitter.com/HackersSlackers?ref_src=twsrc%5Etfw"></a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 	</div>
 </div>
 <!-- end widget -->
