--- a/author.hbs
+++ b/author.hbs
@@ -1,11 +1,12 @@
 {{!< default}}
 {{! The tag above means - insert everything in this file into the {body} of the default.hbs template }}
 <!-- start site's main content area -->
+
 <section class="content-wrap">
 	<div class="container">
 		<div class="row">
 			{{! insert sidebar partial}}
-			{{!-- {{> sidebar}} --}}
+			{{> author-sidebar}}
 			<!-- start main post area -->
 			<div class="col-md-8 main-content">
 				{{> cover-author}}
@@ -15,8 +16,8 @@
 				{{pagination}}
 			</div>
 			<!-- end main post area -->
-
 		</div>
 	</div>
 </section>
+
 <!-- end site's main content area -->
