--- a/default.hbs
+++ b/default.hbs
@@ -15,6 +15,8 @@
 	<link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}">
 	<link rel="stylesheet" type="text/css" href="{{asset "css/hl-styles/code.css"}}">
 
+	<script src="{{asset "/js/secret.js"}}"></script>
+
 	{{#is "post"}}
 		<meta property="og:image" content="{{img_url feature_image}}">
 	{{else}}
