--- a/assets/css/less_parts/author.less
+++ b/assets/css/less_parts/author.less
@@ -108,19 +108,20 @@
 		position: relative;
 		border: 1px solid mix(@theme-color, #e1e1e1, 20%);
 
-		h4 {
+		a {
 			position: absolute;
-			bottom: 0;
+			bottom: 12px;
 			left: 15px;
 			color: white;
 			z-index: 10;
-			width: 90%;
+			width: 79%;
 			line-height: 1;
 			overflow: hidden;
 			text-overflow: ellipsis;
 			display: block;
 			white-space: nowrap;
-			font-size: 18px;
+			font-size: 15px;
+			font-family: 'akzidenz-regular', sans-serif;
 		}
 
 		i {
@@ -129,6 +130,7 @@
 			bottom: 12px;
 			z-index: 100;
 			font-size: 14px;
+			color: white;
 		}
 
 		&::after {
