--- a/assets/css/less_parts/kanban.less
+++ b/assets/css/less_parts/kanban.less
@@ -66,8 +66,8 @@
         background-color: #f9f9f9;
         padding: 10px 15px;
         position: relative;
-        border: 1px solid #eaeaea;
-        margin-bottom: 20px;
+        border: 1px solid #f1f1f1;
+        margin-bottom: 15px;
         overflow: hidden;
         border-radius: 3px;
 
@@ -202,12 +202,12 @@
           .epic {
             border-radius: 4px;
             text-align: center;
-            padding: 1px 10px;
+            /*padding: 1px 10px;*/
 
             span {
               color: white;
               font-size: 12px;
-              font-family: 'akzidenz-medium';
+              font-family: 'akzidenz';
             }
 
             &.Creative span,
