--- a/assets/css/less_parts/page.less
+++ b/assets/css/less_parts/page.less
@@ -52,12 +52,20 @@
   .page-head {
     .post-title {
       margin: 40px 40px 0;
+
+      @media(max-width: 800px){
+        margin:40px 30px 0;
+      }
     }
   }
 
   .post-content {
     margin: 20px 40px;
     /*width: 68%;*/
+
+    @media(max-width: 800px){
+      margin:25px 30px 0;
+    }
   }
 
   p {
