--- a/custom-author-archive.hbs
+++ b/custom-author-archive.hbs
@@ -26,9 +26,9 @@
 								<div class="about-author" style="background: url({{cover_img}}) center center; background-color: rgba(255, 255, 255, 0.9); background-blend-mode: overlay;">
 									<div class="author-specs">
 									{{#if profile_image}}
- 										<a href="{{url}}"><img src="{{profile_image}}" alt="Author image" class="avatar pull-left"></a>
+ 										<a href="{{url}}" class="avatar-link"><img src="{{profile_image}}" alt="Author image" class="avatar"></a>
  									{{else}}
- 										<a href="{{url}}"><img src="{{asset "images/default-user-image.jpg"}}" alt="Author image" class="avatar pull-left"></a>
+ 										<a href="{{url}}" class="avatar-link"><img src="{{asset "images/default-user-image.jpg"}}" alt="Author image" class="avatar"></a>
  									{{/if}}
  									<div class="details">
  										<div class="author">
