--- a/assets/css/less_parts/postfooter.less
+++ b/assets/css/less_parts/postfooter.less
@@ -25,6 +25,7 @@
 
 			@media(max-width: 600px) {
 				 padding: 8px 15px !important;
+				 border: 0 !important;
 			}
 
 			&:hover span {
@@ -37,7 +38,7 @@
 			margin-right: 10px;
 
 			@media(max-width: 600px) {
-				font-size: 18px;
+				font-size: 20px;
 				margin-right: 0;
 			}
 		}
