--- a/post.hbs
+++ b/post.hbs
@@ -35,6 +35,14 @@
 						<span class="date meta-item"><i class="fal fa-calendar"></i> <span>{{date format="MMMM DD"}}</span></span>
 					</div>
 
+
+					{{#has tag="Roundup"}}
+					<div class="post-roundup-blurb">
+						<div class="blurb-icon"></div>
+						<p>Each and every night resident genius Snkia emerges from the shadows bearing gifts for human and robot-kind. Frantic research summed up in just a few choice hyperlinks, only on Lynx Roundup.</p>
+					</div>
+					{{/has}}
+
 					<div class="post-content">
 						{{content}}
 						<footer class="post-footer">
