--- a/assets/css/less_parts/linkpreview.less
+++ b/assets/css/less_parts/linkpreview.less
@@ -7,9 +7,11 @@
   background-color: #ffffff;
   display: flex;
   justify-content: space-between;
+  overflow: hidden;
+  transition: all .2s easout;
+
   @media(max-width: 800px) {
-    width: 90%;
-    padding: 10px 4%;
+    width: 99%;
     display: block;
   }
 
@@ -21,17 +23,20 @@
     background-position-y: center;
     border-radius: 5px 0px 0px 5px;
     border-right: 1px solid #d2d2d2;
+    transition: all .2s easout;
 
     @media(max-width: 800px) {
       width: 100%;
       height: 140px;
+      border-bottom: 1px solid #d2d2d2;
+      border-radius: 0;
     }
   }
 
   i {
     margin-right: 10px;
     display: inline-block;
-    font-size: 12px;
+    font-size: 10px;
     margin-right: 10px;
     color: grey;
   }
@@ -39,7 +44,7 @@
   .url-info {
     color: @theme-color;
     margin-top: 0;
-    font-size: 13px;
+    font-size: 11px;
     display: inline-block;
     margin: 0 !important;
     white-space: nowrap;
@@ -55,8 +60,9 @@
     padding: 30px;
     width: -webkit-fill-available;
 
+
     @media(max-width: 800px) {
-      padding:0;
+      padding: 10px 20px;
       display: block;
     }
 
@@ -65,10 +71,12 @@
       font-size: 1.35em;
       font-weight: 500;
       line-height: 1;
+      margin-bottom: 15px;
 
       @media(max-width: 800px) {
-        font-size: 1.3em;
-        line-height: 1;
+        font-size: 1.2em;
+        line-height: 1.1;
+        margin-bottom: 5px;
       }
     }
 
@@ -97,6 +105,10 @@
     cursor: pointer;
     text-decoration: none;
     border: 1px solid @theme-color;
+
+    .preview-image {
+      border-color: @theme-color;
+    }
 
     a,
     h4,
